# tenra-Facet

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
apps/desktopapp/: index.html  package.json  tsconfig.json
apps/desktopapp/src/: App.tsx  AppRoot.tsx  styles.css
apps/desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktopapp/src-tauri/capabilities/: default.json
apps/desktopapp/src-tauri/icons/: icon.icns
apps/desktopapp/src-tauri/src/: main.rs
apps/desktopapp/src/components/: FacetResults.tsx  FacetSidebar.tsx
apps/desktopapp/src/hooks/: useFacetWorkbench.ts
apps/desktopapp/src/lib/: desktopStore.ts  facetExports.ts  facetStorage.ts  facetTypes.ts  localCorpusSearch.ts
apps/desktopapp/src/styles/: base.css  responsive.css  results.css  shell.css  sidebar.css  (+1 more)
apps/mobileapp/: app.json  package.json
apps/mobileapp/src/: App.tsx
apps/webapp/: next.config.js  package.json  tsconfig.json
docs/: ARCHITECTURE_NOTES.md  DEVELOPER_GUIDE.md  HANDOFFS.md  MODULE_MANIFEST.md  NEGATIVE_SPEC.md  REPO_MAP.md  STABILITY_CHECKLIST.md  SUITE_HANDOFF_STANDARD.md
fixtures/handoffs/: orientation-packet.json
scripts/: _common.sh  bootstrap.sh  check-env.sh  check-packages.sh  dev-both.sh  dev-desktop.sh  dev-mobile.sh  dev-web.sh  doctor.sh  install-desktop-app.sh  maintainability.config.json  validate-handoffs.mjs  verify-all.sh  verify-desktop.sh  verify-mobile.sh  verify-web.sh
scripts/contracts/: maintainability-contracts.json
(+19 files in other folders)
