[package]
name = "facet-desktop"
version = "0.1.0"
description = "tenra Facet desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
